@@ -2,6 +2,8 @@ Nutch Change Log
 
 Nutch Current Development
 
+* NUTCH-1747 Use AtomicInteger as semaphore in Fetcher (jnioche)
+
 * NUTCH-1735 code dedup fetcher queue redirects (snagel)
 
 * NUTCH-1745 Upgrade to ElasticSearch 1.1.0 (jnioche)
